# linuxBridge

./: .gitignore
examples/bridge-app/bridge-common/: bridge-app.zap
examples/bridge-app/linux/: BUILD.gn  DeviceCallbacks.cpp  DeviceCallbacks.h  Dockerfile  Dockerfile.existing  TODO.md  bridge.service  crossCompile.sh  downloadMQTT.sh  flashESP.sh  main.cpp  mainNew.cpp  mainNew2.cpp  setupCross.sh
examples/bridge-app/linux/clusters/: BasicCluster.cpp  BasicCluster.h  Cluster.h  ColourCluster.cpp  ColourCluster.h  DescriptorCluster.cpp  DescriptorCluster.h  HumidityCluster.cpp  HumidityCluster.h  LevelControlCluster.cpp  LevelControlCluster.h  ModeCluster.cpp  ModeCluster.h  OnOffCluster.cpp  OnOffCluster.h  TempCluster.cpp  TempCluster.h
examples/bridge-app/linux/devices/: Device.cpp  Device.h  DeviceButton.cpp  DeviceButton.h  DeviceLight.cpp  DeviceLight.h  DeviceLightLevel.cpp  DeviceLightLevel.h  DeviceLightRGB.cpp  DeviceLightRGB.h  DeviceLightTemp.cpp  DeviceLightTemp.h  DevicePing.cpp  DevicePing.h  DeviceTemperature.cpp  DeviceTemperature.h
examples/bridge-app/linux/drivers/: usart.c  usart.h
examples/bridge-app/linux/mqtt/: mqtt.cpp  mqtt.h
examples/bridge-app/linux/mqtt/lib/aarch64-linux-gnu/: libmosquitto.so.2.0.11
examples/bridge-app/linux/tasks/: MatterTask.cpp  MatterTask.h  SerialTask.cpp  SerialTask.h
examples/bridge-app/linux/transportLayer/: transportLayer.cpp  transportLayer.h
examples/bridge-app/linux/transportLayer/espNow/: EspNowData.cpp  EspNowData.h  SerialFramerEspNow.cpp  SerialFramerEspNow.h  transportEspNow.cpp  transportEspNow.h
examples/bridge-app/linux/transportLayer/local/: transportLocal.cpp  transportLocal.h
examples/bridge-app/linux/transportLayer/mqtt/: mqttWrapper.cpp  mqttWrapper.h  transportMqtt.cpp  transportMqtt.h
examples/bridge-app/linux/transportLayer/ping/: transportPing.cpp  transportPing.h
examples/bridge-app/linux/utils/: Crc16.cpp  Crc16.h  DeviceList.cpp  DeviceList.h  DynamicList.cpp  DynamicList.h  EndpointApi.cpp  EndpointApi.h  EspNowData.cpp  Log.cpp  Log.h  PersistDevList.cpp  PersistDevList.h  TaskMessage.cpp  TaskMessage.h  TimerTick.cpp  TimerTick.h  assert.cpp  assert.h  futil.cpp  futil.h  ping.cpp  ping.h  pingUtil.cpp  pingUtil.h  skytracMqtt.c  skytracMqtt.h  skytracMqttOther.c  skytracMqttOther.h  timer.cpp  timer.h  uart.c  uart.cpp  uart.h  usart.c  usart.h  utils.cpp  utils.h
examples/bridge-app/linux/webUI/: deploy.sh  index.html  webUI.service
(+1 files in other folders)
