# Copyright (c) 2021 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/chip.gni")

import("${chip_root}/build/chip/tools.gni")

assert(chip_build_tools)

executable("chip-bridge-app") {
  sources = [
    # "clusters/BasicCluster.cpp",
    # "clusters/Cluster.cpp",
    # "clusters/ColourCluster.cpp",
    # "clusters/DescriptorCluster.cpp",
    # "clusters/HumidityCluster.cpp",
    # "clusters/LevelControlCluster.cpp",
    # "clusters/ModeCluster.cpp",
    # "clusters/OnOffCluster.cpp",
    # "clusters/TempCluster.cpp",
    # "devices/Device.cpp",
    # "devices/DeviceButton.cpp",
    # "devices/DeviceLight.cpp",
    # "devices/DeviceLightLevel.cpp",
    # "devices/DeviceLightRGB.cpp",
    # "devices/DeviceLightTemp.cpp",
    # "devices/DeviceTemperature.cpp",
    # "drivers/usart.c",
    # "tasks/MatterTask.cpp",
    # "tasks/SerialTask.cpp",
    # "utils/Crc16.cpp",
    # "utils/DynamicList.cpp",
    # "utils/EndpointApi.cpp",
    # "utils/EspNowData.cpp",
    # "utils/TaskMessage.cpp",
    # "utils/TimerTick.cpp",
    "${chip_root}/examples/bridge-app/linux/bridged-actions-stub.cpp",
    "${chip_root}/examples/tv-app/tv-common/include/CHIPProjectAppConfig.h",
    "Device.cpp",
    "include/Device.h",
    "include/main.h",
    "main.cpp",
    "utils/Log.cpp",
  ]

  deps = [
    "${chip_root}/examples/bridge-app/bridge-common",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
  ]

  cflags = [
    "-Wconversion",
    "-Wno-unused-const-variable",
    "-Wno-error",
  ]

  # include_dirs = [
  #   "clusters",
  #   "devices",
  #   "drivers",
  #   "tasks",
  #   "utils",
  # ]

  include_dirs = [
    "include",
    "utils",
  ]

  output_dir = root_out_dir
}

group("linux") {
  deps = [ ":chip-bridge-app" ]
}

group("default") {
  deps = [ ":chip-bridge-app" ]
}
